tests/ui/methods/disambiguate-multiple-impl.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/disambiguate-multiple-impl.rs:21:8
   |
LL |     S::foo(&s);
   |        ^^^ multiple `foo` found
   |
note: candidate #1 is defined in an impl of the trait `A` for the type `S`
  --> $DIR/disambiguate-multiple-impl.rs:12:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^
note: candidate #2 is defined in an impl of the trait `B` for the type `S`
  --> $DIR/disambiguate-multiple-impl.rs:16:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^
help: disambiguate the method for candidate #1
   |
LL |     <S as A>::foo(&s);
   |     ~~~~~~~~~~
help: disambiguate the method for candidate #2
   |
LL |     <S as B>::foo(&s);
   |     ~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
